<resources>
    <!-- Main App -->
    <string name="app_name">Balances for Whitgift School</string>
    <string name="app_title">Balances</string>
    <string name="app_subtitle">for Whitgift School</string>
    <string name="app_base_url">https://balances.iamkelv.in/</string>
    <string name="pound_sign">\u00A3</string>

    <!-- Main Activity -->
    <string name="main_default_value">---</string>
    <string name="main_price_value">\u00A3%s</string>
    <string name="main_lunch_label">Lunch</string>
    <string name="main_tuck_label">Tuck</string>
    <string name="main_last_checked_label">Last Checked:\u0020</string>
    <string name="main_list_price">\u00A3%s</string>

    <!-- Setup Wizard Introduction Activity -->
    <string name="setup_introduction_text">Balances for Whitgift School is an app which allows you to check your lunch and tuck balances, view your recent purchase history and notifies you when your balances are low.\n\nThis app is developed by a student of Whitgift School. This app is not affiliated with Whitgift School or WisePay.\n\nTo proceed, you will need your WisePay username and password in hand. If you are a student, ask a parent/guardian or the School Office for the login details.</string>
    <string name="setup_introduction_title">Introduction</string>

    <!-- Setup Wizard Account Activity -->
    <string name="setup_account_title">Add your account</string>
    <string name="setup_account_instructions">Enter your WisePay account details below. Your account will only be stored on your device.</string>
    <string name="setup_account_sign_in">Sign In</string>
    <string name="setup_account_signed_in">Signed In</string>

    <!-- Setup Wizard Notifications Activity-->
    <string name="setup_notifications_title">Notifications</string>
    <string name="setup_notifications_introduction">Balances can check when your balances are low on a daily basis and alert you when your balances fall below a specified threshold.</string>

    <!-- Setup Wizard Complete Activity -->
    <string name="setup_complete_title">Setup complete</string>
    <string name="setup_complete_information">The setup is now complete. You can now view your balances and purchase history.\n\nNote: Balances are not updated in realtime and are instead sent from the tills to WisePay on a daily basis (usually after school).</string>

    <!-- Preferences Fragment -->
    <string name="preferences_is_setup_complete_key">is_setup_complete</string>
    <string name="preferences_reauthentication_key">is_reauthentication_needed</string>
    <string name="preferences_lunch_key">lunch_amount</string>
    <string name="preferences_tuck_key">tuck_amount</string>
    <string name="preferences_last_checked_key">last_checked</string>
    <string name="preferences_username_key">username</string>
    <string name="preferences_password_key">password</string>

    <string name="preferences_notifications_enabled_key">notifications_enabled</string>
    <string name="preferences_notifications_enabled_title">Enable Notifications</string>
    <string name="preferences_notifications_enabled_summary">Notifications are %s</string>
    <string name="preferences_notifications_enabled_default">true</string>
    <string name="preferences_notifications_enabled_true">enabled</string>
    <string name="preferences_notifications_enabled_false">disabled</string>

    <string name="preferences_notifications_tuck_key">notifications_tuck</string>
    <string name="preferences_notifications_tuck_summary">You will be notified if your tuck balance falls below: \u00A3%s</string>
    <string name="preferences_notifications_tuck_summary_disabled">You will not be notified about your tuck balance</string>
    <string name="preferences_notifications_tuck_title">Set Tuck Threshold</string>
    <string name="preferences_notifications_tuck_default">10</string>

    <string name="preferences_notifications_lunch_key">notifications_lunch</string>
    <string name="preferences_notifications_lunch_summary">You will be notified if your lunch balance falls below: \u00A3%s</string>
    <string name="preferences_notifications_lunch_summary_disabled">You will not be notified about your lunch balance</string>
    <string name="preferences_notifications_lunch_title">Set Lunch Threshold</string>
    <string name="preferences_notifications_lunch_default">10</string>

    <string name="preferences_notifications_time_key">notifications_time</string>
    <string name="preferences_notifications_time_title">Set Time</string>
    <string name="preferences_notifications_time_summary">Your balances will be checked daily at: %s</string>
    <string name="preferences_notifications_time_default">18:00</string>

    <!-- Pickers -->
    <string name="threshold_picker_threshold_amount">Threshold: \u00A3%1$s</string>
    <string name="threshold_picker_threshold_disabled">Threshold: Disabled</string>

    <!-- Accessibility -->
    <string name="accessibility_next_button">Next Button</string>
    <string name="accessibility_prev_button">Previous Button</string>

</resources>
