<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="@string/preferences_notifications_enabled_default"
        android:key="@string/preferences_notifications_enabled_key"
        android:summary="@string/preferences_notifications_enabled_summary"
        android:title="@string/preferences_notifications_enabled_title" />

    <in.iamkelv.balances.preferences.TimePickerPreference
        android:defaultValue="@string/preferences_notifications_time_default"
        android:dependency="@string/preferences_notifications_enabled_key"
        android:key="@string/preferences_notifications_time_key"
        android:summary="@string/preferences_notifications_time_summary"
        android:title="@string/preferences_notifications_time_title" />

    <in.iamkelv.balances.preferences.ThresholdPickerPreference
        android:defaultValue="@string/preferences_notifications_lunch_default"
        android:dependency="@string/preferences_notifications_enabled_key"
        android:key="@string/preferences_notifications_lunch_key"
        android:summary="@string/preferences_notifications_lunch_summary"
        android:title="@string/preferences_notifications_lunch_title" />

    <in.iamkelv.balances.preferences.ThresholdPickerPreference
        android:defaultValue="@string/preferences_notifications_tuck_default"
        android:dependency="@string/preferences_notifications_enabled_key"
        android:key="@string/preferences_notifications_tuck_key"
        android:summary="@string/preferences_notifications_tuck_summary"
        android:title="@string/preferences_notifications_tuck_title" />


</PreferenceScreen>